1266: Fix spacing below mobile-view of filtering controls

--- a/src/css/organisms/filter-list.scss
+++ b/src/css/organisms/filter-list.scss
@@ -52,6 +52,7 @@
   padding-top: 5px;
   padding-bottom: 5px;
   padding-right: 8px;
+  margin-bottom: $spacing-md;
   summary {
     &:before {
       margin-top: -10px;
